--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .grid{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -7,7 +8,7 @@
     background: #fff;
     box-shadow: 0 1px 1px rgba(0,0,0,0.15);
     margin: auto;
-    margin-top: 10px;
+    height: 100vh;
     aspect-ratio: 1/1;
 }
 
